syntax = "proto3";

package proto;

option java_package = "com.github.zainzin.messages";

message Employee {
    int32 id = 1;
    int32 badgeNumber  = 2;
    string firstName = 3;
    string lastName = 4;
    float vacationAccrualRate = 5;
    float vacationAccrued = 6;
}

message GetAllrequest {}

message GetByBadgeNumberRequest {
    int32 badgeNumber = 1;
}

message EmployeeRequest {
    Employee employee = 1;
}

message EmployeeResponse {
    Employee employee = 1;
}

message AddPhotoRequest {
    bytes data = 1;
}

message AddPhotoResponse {
    bool isSuccess = 1;
}

service EmployeeServices {
    rpc getByBadgeNumber (GetByBadgeNumberRequest) returns (EmployeeResponse);
    rpc getAll (GetAllrequest) returns (stream EmployeeResponse);
    rpc saveEmployee (EmployeeRequest) returns (EmployeeResponse);
    rpc saveAll (stream EmployeeRequest) returns (stream EmployeeResponse);
    rpc addPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);
}
